--- a/app/src/main/res/layout-night/fragment_lyric_translation.xml
+++ b/app/src/main/res/layout-night/fragment_lyric_translation.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
         <import type="android.view.View"/>
         <variable
             name="translationItem"
             type="com.whycody.wordslife.data.TranslationItem" />
-        <variable
-            name="translationIsShown"
-            type="boolean" />
     </data>
 
     <LinearLayout
@@ -27,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/s_study_mode_translation"
@@ -36,18 +33,13 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/flagImage"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@{translationItem.drawable}"/>
 
             <TextView
-                android:id="@+id/translationText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,23 +48,9 @@
                 android:textColor="?attr/colorPrimaryDark"
                 android:layout_gravity="center"
                 android:gravity="center|start"
-                app:layout_constraintLeft_toRightOf="@id/flagImage"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:paddingStart="12dp"/>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@drawable/s_study_mode_translation"
-                app:layout_constraintLeft_toLeftOf="@id/translationText"
-                app:layout_constraintRight_toRightOf="@id/translationText"
-                app:layout_constraintTop_toTopOf="@id/translationText"
-                app:layout_constraintBottom_toBottomOf="@id/translationText"
-                android:visibility="@{translationIsShown ? View.GONE : View.VISIBLE}"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
