--- a/app/src/main/res/layout-night/item_library.xml
+++ b/app/src/main/res/layout-night/item_library.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:paddingVertical="25dp"
         android:onClick="@{()->libraryInteractor.libraryItemClicked(libraryItem.id)}"
-        android:background="@{position%2 == 0 ? @color/background_gray_night : @color/gray_night}">
+        android:background="@{position%2 == 0 ? @android:color/transparent : @color/gray_night}">
 
         <LinearLayout
             android:layout_width="0dp"
