--- a/app/src/main/res/layout/item_study_mode_vocabulary.xml
+++ b/app/src/main/res/layout/item_study_mode_vocabulary.xml
@@ -33,14 +33,16 @@
             android:paddingVertical="8dp"
             android:onClick="@{()->interactor.wordClicked(word)}"
             android:textColor="?attr/colorPrimaryDark"
-            android:background="@drawable/ripple_vocabulary_backgr"
+            android:background="@drawable/ripple_study_mode_vocabulary"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/ripple_vocabulary_backgr"
+            android:background="@drawable/ripple_study_mode_vocabulary"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintLeft_toLeftOf="@id/wordText"
             app:layout_constraintTop_toTopOf="@id/wordText"
             app:layout_constraintRight_toRightOf="@id/wordText"
