Fixed some bugs and added functionality to reveal chosen word in study mode

--- a/app/src/main/res/layout/fragment_study_mode_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_study_mode_vocabulary.xml
@@ -17,6 +17,7 @@
         android:id="@+id/studyModeVocabularyRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:overScrollMode="never"
         android:nestedScrollingEnabled="false"/>
 
 </LinearLayout>
