--- a/app/src/main/res/layout/item_study_mode_vocabulary.xml
+++ b/app/src/main/res/layout/item_study_mode_vocabulary.xml
@@ -3,8 +3,8 @@
 
     <data>
         <variable
-            name="word"
-            type="java.lang.String" />
+            name="vocabularyItem"
+            type="com.whycody.wordslife.data.VocabularyItem" />
         <variable
             name="interactor"
             type="com.whycody.wordslife.search.lyric.vocabulary.VocabularyInteractor" />
@@ -25,13 +25,12 @@
             android:id="@+id/wordText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{word}"
+            android:text="@{vocabularyItem.word}"
             android:clickable="true"
             android:focusable="true"
             android:textSize="15sp"
             android:paddingHorizontal="11dp"
             android:paddingVertical="8dp"
-            android:onClick="@{()->interactor.wordClicked(word)}"
             android:textColor="?attr/colorPrimaryDark"
             android:background="@drawable/ripple_study_mode_vocabulary"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -43,6 +42,7 @@
             android:background="@drawable/ripple_study_mode_vocabulary"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="@{()->interactor.wordClicked(vocabularyItem.index, vocabularyItem.word)}"
             app:layout_constraintLeft_toLeftOf="@id/wordText"
             app:layout_constraintTop_toTopOf="@id/wordText"
             app:layout_constraintRight_toRightOf="@id/wordText"
