--- a/app/src/main/res/layout/fragment_study_mode.xml
+++ b/app/src/main/res/layout/fragment_study_mode.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
         android:background="?attr/colorControlHighlight"
         tools:context=".library.studymode.StudyModeFragment">
 
