--- a/app/src/main/res/layout/fragment_study_mode_translation.xml
+++ b/app/src/main/res/layout/fragment_study_mode_translation.xml
@@ -31,16 +31,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/s_study_mode_translation"
-            android:paddingHorizontal="@dimen/app_padding"
-            android:paddingVertical="10dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/flagImage"
-                android:layout_width="30dp"
+                android:layout_width="46dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center"
+                android:paddingLeft="@dimen/app_padding"
+                android:paddingVertical="10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,11 +51,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingVertical="10dp"
                 android:text="@{translationItem.translatedSentence}"
                 android:textSize="15sp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:layout_gravity="center"
                 android:gravity="center|start"
+                android:paddingRight="@dimen/app_padding"
                 app:layout_constraintLeft_toRightOf="@id/flagImage"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
