Added Loading fragment to study mode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="light_gray">#E7E7E7</color>
     <color name="light_gray_night">#1C1C1C</color>
     <color name="gray">#F4F4F4</color>
-    <color name="gray_night">#1E1E1E</color>
+    <color name="gray_night">#202020</color>
     <color name="lyric_gray">#E6E6E6</color>
     <color name="lyric_gray_night">#161616</color>
     <color name="lyric_gray_dark">#AEAEAE</color>
