--- a/app/src/main/res/layout/fragment_study_mode.xml
+++ b/app/src/main/res/layout/fragment_study_mode.xml
@@ -5,6 +5,8 @@
         <variable
             name="viewModel"
             type="com.whycody.wordslife.library.studymode.StudyModeViewModel" />
+        <import type="com.whycody.wordslife.data.studymode.StudyModeDaoImpl"/>
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout
@@ -38,6 +40,7 @@
             android:textAllCaps="false"
             android:textStyle="bold"
             android:textColor="?attr/colorAccent"
+            android:visibility="@{viewModel.difficulty.equals(StudyModeDaoImpl.HARD) ? View.GONE : View.VISIBLE}"
             android:alpha="@{viewModel.numberOfAvailableWords == viewModel.numberOfShownWords ? 0.3f : 1f}"
             android:enabled="@{viewModel.numberOfAvailableWords != viewModel.numberOfShownWords}"
             android:background="@android:color/transparent"
