Changed layout of study mode to scrollable one

--- a/app/src/main/res/layout/fragment_study_mode.xml
+++ b/app/src/main/res/layout/fragment_study_mode.xml
@@ -10,7 +10,6 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/fragmentsContainer"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -21,46 +20,64 @@
         android:background="?attr/colorControlHighlight"
         tools:context=".library.studymode.StudyModeFragment">
 
-        <fragment
-            android:id="@+id/studyModeMovieFragment"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:overScrollMode="never">
+
+            <LinearLayout
+                android:id="@+id/fragmentsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <fragment
+                    android:id="@+id/studyModeMovieFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:name="com.whycody.wordslife.library.studymode.movie.StudyModeMovieFragment"
+                    android:layout_marginBottom="20dp"/>
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:name="com.whycody.wordslife.library.studymode.movie.StudyModeMovieFragment"
-            android:layout_marginBottom="20dp"/>
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_gravity="bottom"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textColor="?attr/colorAccent"
+                android:visibility="@{viewModel.difficulty.equals(StudyModeDaoImpl.HARD) ? View.GONE : View.VISIBLE}"
+                android:alpha="@{viewModel.numberOfAvailableWords == viewModel.numberOfShownWords ? 0.3f : 1f}"
+                android:enabled="@{viewModel.numberOfAvailableWords != viewModel.numberOfShownWords}"
+                android:background="@android:color/transparent"
+                android:onClick="@{() -> viewModel.revealWordBtnClicked()}"
+                android:layout_marginHorizontal="@dimen/app_padding"
+                android:layout_marginBottom="20dp"
+                android:text="@string/reveal_word" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:textColor="?attr/colorAccent"
-            android:visibility="@{viewModel.difficulty.equals(StudyModeDaoImpl.HARD) ? View.GONE : View.VISIBLE}"
-            android:alpha="@{viewModel.numberOfAvailableWords == viewModel.numberOfShownWords ? 0.3f : 1f}"
-            android:enabled="@{viewModel.numberOfAvailableWords != viewModel.numberOfShownWords}"
-            android:background="@android:color/transparent"
-            android:onClick="@{() -> viewModel.revealWordBtnClicked()}"
-            android:layout_marginHorizontal="@dimen/app_padding"
-            android:layout_marginBottom="35dp"
-            android:text="@string/reveal_word" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_gravity="bottom"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:background="@drawable/s_show_translation_btn"
+                android:layout_marginHorizontal="@dimen/app_padding"
+                android:onClick="@{() -> viewModel.nextBtnClicked()}"
+                android:text="@{viewModel.numberOfAvailableWords == viewModel.numberOfShownWords ? @string/next : @string/show_translation}"
+                android:layout_marginBottom="30dp"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:background="@drawable/s_show_translation_btn"
-            android:layout_marginHorizontal="@dimen/app_padding"
-            android:onClick="@{() -> viewModel.nextBtnClicked()}"
-            android:text="@{viewModel.numberOfAvailableWords == viewModel.numberOfShownWords ? @string/next : @string/show_translation}"
-            android:layout_marginBottom="30dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
