--- a/app/src/main/res/layout/activity_choose_source.xml
+++ b/app/src/main/res/layout/activity_choose_source.xml
@@ -17,50 +17,68 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlways|snap">
+                android:minHeight="100dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="53dp"
-                    android:background="@drawable/s_search_button"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:layout_marginTop="30dp"
-                    android:layout_marginHorizontal="@dimen/app_padding"
-                    tools:context=".search.field.SearchFieldFragment">
+                    android:layout_marginBottom="25dp"
+                    android:layout_marginHorizontal="@dimen/app_padding">
 
-                    <ImageButton
+                    <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_search"
-                        android:alpha="0.6"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="4dp"
-                        android:background="@android:color/transparent"/>
-
-                    <EditText
-                        android:id="@+id/searchMovieInput"
-                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="@string/search"
-                        android:imeOptions="actionSearch"
-                        android:background="@android:color/transparent"
-                        android:paddingHorizontal="6dp"
-                        android:paddingVertical="15dp"
-                        android:maxLength="200"
-                        android:inputType="text"
-                        android:textSize="16sp"
-                        android:maxLines="1" />
+                        android:text="@string/choosing_source"
+                        android:textStyle="bold"
+                        android:textColor="?attr/colorPrimaryVariant"
+                        android:textSize="18sp"
+                        android:layout_marginBottom="25dp"/>
 
-                    <ImageButton
-                        android:id="@+id/clearBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_clear"
-                        android:visibility="invisible"
-                        android:alpha="0.6"
-                        android:paddingEnd="16dp"
-                        android:paddingStart="4dp"
-                        android:background="@android:color/transparent"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="53dp"
+                        android:background="@drawable/s_search_button"
+                        tools:context=".search.field.SearchFieldFragment">
+
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_search"
+                            android:alpha="0.6"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="4dp"
+                            android:background="@android:color/transparent"/>
+
+                        <EditText
+                            android:id="@+id/searchMovieInput"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:hint="@string/search"
+                            android:imeOptions="actionSearch"
+                            android:background="@android:color/transparent"
+                            android:paddingHorizontal="6dp"
+                            android:paddingVertical="15dp"
+                            android:maxLength="200"
+                            android:inputType="text"
+                            android:textSize="16sp"
+                            android:maxLines="1" />
+
+                        <ImageButton
+                            android:id="@+id/clearBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_clear"
+                            android:visibility="invisible"
+                            android:alpha="0.6"
+                            android:paddingEnd="16dp"
+                            android:paddingStart="4dp"
+                            android:background="@android:color/transparent"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -68,14 +86,59 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/movieRecycler"
+    <View
+        android:id="@+id/downCornersContentFragment"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="?attr/colorSecondaryVariant"
+        app:layout_anchor="@id/fragmentsContainer"
+        app:layout_anchorGravity="bottom"/>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/fragmentsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="?attr/colorSecondaryVariant"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="0dp"
+        app:layout_anchor="@+id/searchAppBar"
+        app:layout_anchorGravity="bottom"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layout_anchor="@id/searchAppBar"
-            app:layout_anchorGravity="bottom"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/movies_and_series"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorPrimaryVariant"
+                    android:textSize="17sp"
+                    android:paddingHorizontal="@dimen/app_padding"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/movieRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:overScrollMode="never"
+                    app:layout_anchor="@id/searchAppBar"
+                    app:layout_anchorGravity="bottom"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
