--- a/app/src/main/res/layout/activity_choose_source.xml
+++ b/app/src/main/res/layout/activity_choose_source.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".data.filter.choose.source.ChooseSourceActivity">
+    tools:context=".search.filter.choose.source.ChooseSourceActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/searchAppBar"
