--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,17 +5,13 @@
         <variable
             name="onlySaved"
             type="Boolean" />
-        <variable
-            name="listsAreFilled"
-            type="Boolean" />
-        <import type="android.view.View"/>
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:overScrollMode="never"
         android:fillViewport="true"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
@@ -54,31 +50,16 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/cleanListBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:paddingHorizontal="@dimen/app_padding"
-                android:text="@{onlySaved ? @string/deselectall : @string/deletehistory}"
-                android:textStyle="bold"
-                android:paddingVertical="10dp"
-                android:layout_marginBottom="10dp"
-                android:visibility="@{listsAreFilled ? View.VISIBLE : View.GONE}"
-                android:background="@android:color/transparent"
-                android:textColor="@drawable/s_clear_btn"/>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/historyRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:overScrollMode="never"
-                android:nestedScrollingEnabled="false"
-                android:layoutAnimation="@anim/layout_fall_down"
+                android:nestedScrollingEnabled="true"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
