--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -6,7 +6,7 @@
             name="header"
             type="java.lang.String" />
         <variable
-            name="itemIsCollapsed"
+            name="itemIsBtn"
             type="boolean" />
     </data>
 
@@ -59,6 +59,7 @@
                     android:layout_gravity="center"
                     android:alpha="0.9"
                     android:src="@drawable/ic_arrow_down"
+                    android:rotation="@{itemIsBtn ? 90 : 0}"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
