--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -8,6 +8,7 @@
         <variable
             name="itemIsBtn"
             type="boolean" />
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout
@@ -59,7 +60,8 @@
                     android:layout_gravity="center"
                     android:alpha="0.9"
                     android:src="@drawable/ic_arrow_down"
-                    android:rotation="@{itemIsBtn ? 90 : 0}"
+                    android:visibility="@{itemIsBtn ? View.VISIBLE : View.GONE}"
+                    android:rotation="90"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
