Now user can copy text through long click on it

--- a/app/src/main/res/layout-night/fragment_lyric_translation.xml
+++ b/app/src/main/res/layout-night/fragment_lyric_translation.xml
@@ -40,6 +40,7 @@
                 android:src="@{translationItem.drawable}"/>
 
             <TextView
+                android:id="@+id/contentText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
