--- a/app/src/main/res/layout/fragment_study_mode.xml
+++ b/app/src/main/res/layout/fragment_study_mode.xml
@@ -52,6 +52,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/revealWordBtn"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_gravity="bottom"
