--- a/app/src/main/res/layout/fragment_study_mode_translation.xml
+++ b/app/src/main/res/layout/fragment_study_mode_translation.xml
@@ -65,6 +65,7 @@
                 android:paddingStart="12dp"/>
 
             <View
+                android:id="@+id/viewAboveTranslation"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/s_study_mode_translation"
